--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Proyecto-Moviles</string>
+    <string name="bienvenida">Fusce vel fringilla tellus. Quisque vitae mauris purus. Aenean a mattis tortor. Sed tincidunt quis odio eu lacinia.</string>
+    <string name="crearcuenta">Crear Cuenta</string>
+    <string name="inicarsesion">Inicar Sesión</string>
 </resources>
